Connection plus belle avec post et delete

--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -4,5 +4,5 @@
 <h2>
     Thème : {{quizSelected.theme}}
 </h2>
-<app-question-list [questionList] = "quizSelected.questions"></app-question-list>
+<app-question-list [quiz] = "quizSelected"></app-question-list>
 
