--- a/front-end/src/app/quizzes/question-list/question-list.component.html
+++ b/front-end/src/app/quizzes/question-list/question-list.component.html
@@ -1,7 +1,7 @@
-<app-question-form></app-question-form>
+<app-question-form [quiz] = "quiz"></app-question-form>
 <br>Liste des questions : 
 <div class="question-list"> 
-<div class="question" *ngFor="let question of questionList">
+<div class="question" *ngFor="let question of quiz.questions">
   <app-questions [question] = question (questionDeleted) = "deleteQuestion($event)"></app-questions>
 </div>
 </div>
