--- a/front-end/src/app/quizzes/quiz/quiz.component.html
+++ b/front-end/src/app/quizzes/quiz/quiz.component.html
@@ -15,7 +15,7 @@
     <div class = "creationDate" *ngIf = "quiz.creationDate">
         Date de création : {{quiz.creationDate | date}}<br>
     </div>
-    <button class="button-card" (click)="selectQuiz()">Select</button>
+    <button><a routerLink= "/quiz-sequence/{{quiz.id}}"> Jouer Quiz</a></button>
     <button class="button-card" (click)="deleteQuiz()">Supprimer</button>
     <nav>
         <a routerLink= "/edit-quiz/{{quiz.id}}"> Editer le quiz n°{{quiz.id}}</a>
