--- a/front-end/src/app/start/staff/staff.component.html
+++ b/front-end/src/app/start/staff/staff.component.html
@@ -1,3 +1,6 @@
+<button><a routerLink= "/home">Retour</a></button>
+<button><a routerLink= "/home">Home</a></button>
+<br>
 <app-quiz-form></app-quiz-form>
-<button><a routerLink= "/user"> Voir la liste des utilisateurs</a></button>
+<button><a routerLink= "/user">Voir la liste des utilisateurs</a></button>
 <app-quiz-list></app-quiz-list><!--app-quiz-list-staff-->
