--- a/front-end/src/app/users/user-list/user-list.component.html
+++ b/front-end/src/app/users/user-list/user-list.component.html
@@ -1,3 +1,6 @@
+<button><a routerLink= "/staff">Retour</a></button>
+<button><a routerLink= "/home">Home</a></button>
+<br>
 <app-user-form></app-user-form>
 <div class="user-list">
     <div class="user" *ngFor="let user of userList">
