--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -1,5 +1,5 @@
-<button><a routerLink= "/staff">Retour</a></button>
-<button><a routerLink= "/home">Home</a></button>
+<button class="button-card" routerLink= "/staff">Retour</button>
+<button class="button-card" routerLink= "/home">Home</button>
 <div *ngIf ="quizSelected" >
 <h1>
  Nom du quiz : {{quizSelected.name}}
