--- a/front-end/src/app/start/customers/customers.component.html
+++ b/front-end/src/app/start/customers/customers.component.html
@@ -1,3 +1,3 @@
-<button><a routerLink= "/home">Retour</a></button>
-<button><a routerLink= "/home">Home</a></button>
+<button class="button-card" routerLink= "/home">Retour</button>
+<button class="button-card" routerLink= "/home">Home</button>
 <app-quiz-list></app-quiz-list>
