--- a/front-end/src/app/start/home/home.component.html
+++ b/front-end/src/app/start/home/home.component.html
@@ -1,2 +1,3 @@
-<button><a routerLink= "/staff"> Personnel</a></button>
-<button><a routerLink= "/customers"> Accueilli</a></button>
+<button class="button-card" routerLink= "/staff">Personnel</button>
+<br>
+<button class="button-card" routerLink= "/customers">Accueilli</button>
