--- a/front-end/src/app/users/user-list/user-list.component.html
+++ b/front-end/src/app/users/user-list/user-list.component.html
@@ -1,5 +1,5 @@
-<button><a routerLink= "/staff">Retour</a></button>
-<button><a routerLink= "/home">Home</a></button>
+<button class="button-card" routerLink= "/staff">Retour</button>
+<button class="button-card" routerLink= "/home">Home</button>
 <br>
 <app-user-form></app-user-form>
 <div class="user-list">
