--- a/front-end/src/app/start/staff/staff.component.html
+++ b/front-end/src/app/start/staff/staff.component.html
@@ -3,4 +3,4 @@
 <br>
 <app-quiz-form></app-quiz-form>
 <button class="button-card" routerLink= "/user">Voir la liste des utilisateurs</button>
-<app-quiz-list></app-quiz-list>
+<app-quiz-list-staff></app-quiz-list-staff>
