--- a/front-end/src/app/users/user/user.component.html
+++ b/front-end/src/app/users/user/user.component.html
@@ -1,7 +1,4 @@
-<div class="card">
-    <h1>
-        Nom : {{user.name}}
-    </h1>  
-
+<div class="">
+    <h1>Nom : {{user.name}}</h1>
     <button class="button-card" (click)="deleteUser()">Supprimer</button>
 </div>
