--- a/front-end/src/app/users/user/user.component.scss
+++ b/front-end/src/app/users/user/user.component.scss
@@ -2,12 +2,13 @@
 
 h1 {
     font-family: Arial, Helvetica, sans-serif;
-  }
+}
+
 h2 {
     color: blue;
 }
 
 i {
     width: 250px;
-    text-align: center;;
+    text-align: center;
 }
