--- a/front-end/src/app/quizzes/quiz/quiz.component.scss
+++ b/front-end/src/app/quizzes/quiz/quiz.component.scss
@@ -12,5 +12,9 @@ h2 {
 
 i {
     width: 250px;
-    text-align: center;;
+    text-align: center;
+}
+.quiz{
+    max-height: 500px;
+    max-width: 250px;
 }
