--- a/front-end/src/app/quizzes/quiz/quiz.component.html
+++ b/front-end/src/app/quizzes/quiz/quiz.component.html
@@ -1,6 +1,6 @@
 <div class="quiz">
-    <i *ngIf ="quiz.theme==='Actor'" class="fab fa-affiliatetheme" ></i>
-    <i *ngIf ="quiz.theme==='Sport'" class="fab fa-accessible-icon"></i>
+    <!---<i *ngIf ="quiz.theme==='Actor'" class="fab fa-affiliatetheme" ></i>-->
+    <!---<i *ngIf ="quiz.theme==='Sport'" class="fab fa-accessible-icon"></i>-->
     <h1>{{quiz.name}}</h1>
     <h2>{{quiz.theme}}</h2>
     <img [src]="sanitize(img64)" alt="quiz image" style="display: block; margin-left: auto; margin-right: auto; width:80%;">
