--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -1,12 +1,13 @@
 <button class="button-card" routerLink= "/staff">Retour</button>
 <button class="button-card" routerLink= "/home">Home</button>
 <div *ngIf ="quizSelected" >
-<h1>
- Nom du quiz : {{quizSelected.name}}
-</h1>
-<h2>
-    Thème : {{quizSelected.theme}}
-</h2>
-<app-question-list [quiz] = "quizSelected"></app-question-list>
+    <h1>
+    Nom du quiz : {{quizSelected.name}}
+    </h1>
+    <h2>
+        Thème : {{quizSelected.theme}}
+    </h2>
+    <img [src]="sanitize(quizSelected.image)" alt="quiz image" style="display: block; margin-left: auto; margin-right: auto; width:80%;">
+    <app-question-list [quiz] = "quizSelected"></app-question-list>
 </div>
 
