--- a/front-end/src/app/start/home/home.component.html
+++ b/front-end/src/app/start/home/home.component.html
@@ -1,3 +1,5 @@
-<button class="button-card" routerLink= "/staff">Personnel</button>
+<div id="home">
+<button class="button-home" routerLink= "/staff">Personnel</button>
 <br>
-<button class="button-card" routerLink= "/customers">Accueilli</button>
+<button class="button-home" routerLink= "/customers">Accueilli</button>
+</div>
