set correct button for one true Answer :-)

--- a/front-end/src/app/quizzes/answer-form/answer-form.component.html
+++ b/front-end/src/app/quizzes/answer-form/answer-form.component.html
@@ -3,9 +3,15 @@
 <label>
     Réponse
     <input type="text" [formControlName]="'value'">
+    
     <br>
+  <span *ngIf="uniqueCorrectAnswer === false ">
     Correct
     <input type="checkbox" [formControlName]="'isCorrect'"> 
+   </span>
+
+
+    <!--<input type="checkbox" [formControlName]="'isCorrect'"> -->
     <br>
     <button id = "submitAnswer" class="button-card" (click)="submitAnswer()">Valider
     </button>
