Ajout Modification Titre/Theme/Image d'un quiz

--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -1,12 +1,25 @@
 <button class="button-card" routerLink= "/staff">Retour</button>
 <button class="button-card" routerLink= "/home">Home</button>
 <div *ngIf ="quizSelected" >
-    <h1>
-    Nom du quiz : {{quizSelected.name}}
-    </h1>
-    <h2>
-        Thème : {{quizSelected.theme}}
-    </h2>
+    
+    <div *ngIf="!editionMode">
+        <h1>Nom du quiz : {{quizSelected.name}}</h1>
+        <h2>Thème : {{quizSelected.theme}}</h2>
+        <button id = "editQuizName" class="button" (click)="editionMode=true">Modifier</button>
+    </div>
+
+    <div *ngIf="editionMode">
+        <form class="quiz-form" [formGroup]="quizForm">
+            <h1>Nom du quiz : <input class="input-custom" type="text" id="name" [formControlName]="'name'"></h1>
+            <h2>Thème :  <input class="input-custom" type="text" id="theme" [formControlName]="'theme'"></h2>
+            
+            <button id = "confirmEdit" class="button" (click)="updateQuiz()">Valider</button>
+            <button id = "cancel" class="button" (click)="editionMode=false">Annuler</button>
+
+            <input type="file" accept="image/*" (change)="onChangeFile($event)" id = "image">
+        </form>
+    </div>
+    
     <img [src]="sanitize(quizSelected.image)" alt="quiz image" style="display: block; margin-left: auto; margin-right: auto; width:80%;">
     <app-question-list [quiz] = "quizSelected"></app-question-list>
 </div>
