--- a/front-end/src/app/quizzes/quiz/quiz.component.scss
+++ b/front-end/src/app/quizzes/quiz/quiz.component.scss
@@ -20,6 +20,11 @@ i {
 }
 
 .thumbnail {
-    width: 200px;
-    height: 200px;
+    display: block; 
+    margin-left: auto;
+    margin-right: auto; 
+    width: 80%;//--> pour que s'adapte à taille du contenant
+    //--> contenant qui s'adapte à taille de la fenetre
+    //width: 200px;
+    //height: 200px;
 }
