--- a/front-end/src/app/quizzes/quiz/quiz.component.scss
+++ b/front-end/src/app/quizzes/quiz/quiz.component.scss
@@ -4,7 +4,7 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
   }
 h2 {
-    color: blue;
+    color: rgb(202, 3, 202);
 }
 .date{
     font-size: x-small;
