--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.scss
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.scss
@@ -1,1 +1,8 @@
 @import '../../../styles/card.scss';
+
+thumbnail{
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto; 
+    width:80%;
+}
