--- a/front-end/src/app/start/home/home.component.scss
+++ b/front-end/src/app/start/home/home.component.scss
@@ -1,22 +1,29 @@
 @import "../../../styles/variables.scss";
 
 #home{
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+  /*margin-left: auto;
+  margin-right: auto;
+  width: 100%;*/
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 .button-home{
+  position: relative;//absolute;
   display: inline-block;
   background-color: $white;
   border: solid 1px $blue;
   color: $blue;
   font-weight: bold;
-  font-size: 100px;
+  font-size: 80px;
   padding: 0.5em 1em;
+  margin-bottom: 40px;
+  margin-top: 40px;
   width: 100%;
-  height: 350px;
-  line-height: 50px;
-  vertical-align: middle;
+  height: 100%;//350px;
+  //line-height: 50px;
   text-align: center;
   //margin-left:auto;
   //margin-right: auto;
