--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.scss
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.scss
@@ -1,8 +1,26 @@
 @import '../../../styles/card.scss';
 
-thumbnail{
+/*thumbnail{
     display: block; 
     margin-left: auto; 
     margin-right: auto; 
     width:80%;
+}*/
+
+.frame{
+    height: 120px;//à revoir
+    width: 150px;
+    //margin-left: auto;
+    //margin-right: auto;
+    border-style: dashed;
+    border-color:  rgb(243, 58, 144);
+}
+
+.thumbnail {
+    object-fit: cover;
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;//80px;
+    width: 100%;//100px
 }
