--- a/front-end/src/app/quizzes/quiz-list-customers/quiz-list-customers.component.html
+++ b/front-end/src/app/quizzes/quiz-list-customers/quiz-list-customers.component.html
@@ -1,8 +1,7 @@
 <div class="quiz-list">
     <div class="card quiz" *ngFor="let quiz of quizList">
         <button class="button-card" routerLink= "/quiz-sequence/{{quiz.id}}">
-        <app-quiz [quiz]="quiz"></app-quiz><!--(quizSelected)="quizSelected($event)"></app-quiz>-->
+        <app-quiz [quiz]="quiz"></app-quiz>
         </button>
-        <!-- <button class="button-card" routerLink= "/quiz-sequence/{{quiz.id}}">Jouer!</button>-->
     </div>
 </div>
