--- a/front-end/src/app/quizzes/questions/questions.component.scss
+++ b/front-end/src/app/quizzes/questions/questions.component.scss
@@ -10,6 +10,11 @@ h2 {
     font-size: x-small;
 }
 
+.errorMessage{
+    color: rgb(238, 12, 12);
+    font-weight: bold;;
+}
+
 /*i {
     width: 250px;
     text-align: center;;
