--- a/front-end/src/app/start/home/home.component.html
+++ b/front-end/src/app/start/home/home.component.html
@@ -1,5 +1,5 @@
-<div id="home">
-    <button class="button-home" routerLink= "/staff">Personnel</button>
+<div class="buttons-duo">
+    <button class="button-card button-big" routerLink= "/staff">Personnel</button>
     <br>
-    <button class="button-home" routerLink= "/customers">Accueilli</button>
+    <button class="button-card button-big" routerLink= "/customers">Accueilli</button>
 </div>
