--- a/front-end/src/app/start/staff/staff.component.html
+++ b/front-end/src/app/start/staff/staff.component.html
@@ -1,6 +1,7 @@
 <button class="button-card" routerLink= "/home">Retour</button>
 <button class="button-card" routerLink= "/home">Home</button>
-<br>
-<app-quiz-form></app-quiz-form>
-<button class="button-card" routerLink= "/user">Voir la liste des utilisateurs</button>
-<app-quiz-list-staff></app-quiz-list-staff>
+
+<div class="buttons-duo">
+    <button class="button-card button-big" routerLink= "./quiz-list">Liste Quiz</button>
+    <button class="button-card button-big" routerLink= "./user-list">Liste Accueillis</button>
+</div>
