--- a/front-end/src/styles/card.scss
+++ b/front-end/src/styles/card.scss
@@ -8,6 +8,7 @@
   position: relative;
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
   padding: 0 1em 1em 1em;
+  //padding: 2%;
 }
 
 .button-card {
@@ -16,8 +17,25 @@
   color: $blue;
   font-weight: bold;
   padding: 0.5em 1em;
+  //padding: 0.5em 0.5em;
+  //padding: 0.5em 0;
 }
 
 .button-card:hover {
   cursor: pointer;
+}
+
+.buttons-duo {
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+
+.button-big {
+  padding: 0.5em 0;
+  font-size: 350%;
+  margin-top: 5%;
+  width: 100%;
+  height: 100%;
+  text-align: center;
 }
