--- a/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.scss
+++ b/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.scss
@@ -1,4 +1,11 @@
 @import '../../../styles/card.scss';
+
+.quiz-form {
+  //float: left;
+}
+
 .quiz-list {
-  //display: flex;
+  display: flex;
+  flex-wrap: wrap;
+  //float: right;
 }
