--- a/front-end/src/styles/card.scss
+++ b/front-end/src/styles/card.scss
@@ -8,7 +8,6 @@
   position: relative;
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
   padding: 0 1em 1em 1em;
-  //padding: 2%;
 }
 
 .button-card {
@@ -17,8 +16,7 @@
   color: $blue;
   font-weight: bold;
   padding: 0.5em 1em;
-  //padding: 0.5em 0.5em;
-  //padding: 0.5em 0;
+  font-size: small;
 }
 
 .button-card:hover {
