--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -1,4 +1,4 @@
-<button class="button-card" routerLink= "/staff">Retour</button>
+<button class="button-card" routerLink= "/staff/quiz-list">Retour</button>
 <button class="button-card" routerLink= "/home">Home</button>
 <div *ngIf ="quiz" >
     
