--- a/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.html
+++ b/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.html
@@ -1,13 +1,15 @@
 <button class="button-card" routerLink= "/staff">Retour</button>
 <button class="button-card" routerLink= "/home">Home</button>
 <br>
-<!-- put in bootstrap modal -->
+<!-- put in a bootstrap modal -->
+<!-- button: "Nouveau quiz" to triger it-->
 <app-quiz-form class="quiz-form"></app-quiz-form>
 <div class="quiz-list">
     <div class="card quiz" *ngFor="let quiz of quizList">
-        <app-quiz [quiz]="quiz" (quizDeleted) = "deleteQuiz($event)"></app-quiz>
-        <button class="button-card" routerLink= "/edit-quiz/{{quiz.id}}">Modifier</button>
-        <button class="button-card" (click)="deleteQuiz(quiz)">Supprimer</button>
+        <button class="button-card delete" (click)="deleteQuiz(quiz)">Supprimer</button>
+        <button class="button-card quiz" routerLink= "/edit-quiz/{{quiz.id}}">
+            <app-quiz [quiz]="quiz" (quizDeleted) = "deleteQuiz($event)"></app-quiz>
+        </button>
     </div>
 </div>
 
