--- a/front-end/src/app/quizzes/add-thems-form/add-thems-form.component.html
+++ b/front-end/src/app/quizzes/add-thems-form/add-thems-form.component.html
@@ -1,10 +1,8 @@
 <form [formGroup]="themeForm">
     <label>
         Nouveau Thème
-        <input type="text" [formControlName]="'valueToAdd'">
+        <input type="text" [formControlName]="'name'">
 
     </label>
     <button (click) = "okClicked()">Ok</button>  <button (click) = "cancelClicked()">Annuler</button>
-    <br>
-    <button (click) = "addToDataBaseClicked()">Ajouter à la liste déroulante</button>
 </form>
