--- a/front-end/src/app/start/staff/staff.component.html
+++ b/front-end/src/app/start/staff/staff.component.html
@@ -2,6 +2,6 @@
 <button class="button-card" routerLink= "/home">Home</button>
 
 <div class="buttons-duo">
-    <button class="button-card button-big" routerLink= "./quiz-list">Liste Quiz</button>
-    <button class="button-card button-big" routerLink= "./user-list">Liste Accueillis</button>
+    <button class="button-card button-big" routerLink= "./quiz-list">Liste des Quiz</button>
+    <button class="button-card button-big" routerLink= "./user-list">Liste des Accueillis</button>
 </div>
