--- a/front-end/src/app/quizzes/add-thems-form/add-thems-form.component.html
+++ b/front-end/src/app/quizzes/add-thems-form/add-thems-form.component.html
@@ -4,5 +4,5 @@
         <input type="text" [formControlName]="'name'">
 
     </label>
-    <button (click) = "okClicked()">Ok</button>  <button (click) = "cancelClicked()">Annuler</button>
+    <button type="submit" (click) = "okClicked()">Ok</button>  <button type="button" (click) = "cancelClicked()">Annuler</button>
 </form>
