--- a/front-end/src/app/quizzes/answer-form/answer-form.component.html
+++ b/front-end/src/app/quizzes/answer-form/answer-form.component.html
@@ -11,8 +11,8 @@
     Correct
     <input type="checkbox" disabled="true">
   </div>
-  <button id = "submitAnswer" class="button-card" (click)="submitAnswer()">Valider</button>
-  <button id = "cancelAnswer" class="button-card" (click)="cancelAnswer()">Annuler</button>
+  <button id = "submitAnswer" class="button-card" type="submit" (click)="submitAnswer()">Valider</button>
+  <button id = "cancelAnswer" class="button-card" type="reset"(click)="cancelAnswer()">Annuler</button>
   <br>
     
 </label>
