--- a/front-end/src/app/quizzes/quiz-form/quiz-form.component.html
+++ b/front-end/src/app/quizzes/quiz-form/quiz-form.component.html
@@ -5,7 +5,7 @@
     <input class="input-custom" type="text" id="name" [formControlName]="'name'">
     <br>
     <label for="theme">
-      Thème
+      Thème :
       <br>
       <select name = "Thème" id = "theme" [formControlName] = "'theme'"> 
         <option *ngFor = "let current_theme of THEME_LIST" [value] = "current_theme">
